# classicApproximations

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chebyshev.py  haar.py  legendre.py  pyproject.toml  requirements.txt  run.py  trigonometric.py  utils.py
.github/workflows/: CI.yml  pages.yml
approximations/: __init__.py  approximation_method.py  chebyshev.py  haar.py  legendre.py  trigonometric.py
doc/source/: conf.py
docs/html/: .buildinfo  approximations.html  chebyshev.html  genindex.html  haar.html  index.html  legendre.html  modules.html  objects.inv  py-modindex.html  run.html  search.html  searchindex.js  trigonometric.html  utils.html
docs/html/_modules/: chebyshev.html  haar.html  index.html  legendre.html  run.html  trigonometric.html  utils.html
docs/html/_modules/approximations/: approximation_method.html  chebyshev.html  haar.html  legendre.html  trigonometric.html
docs/html/_sources/: approximations.rst.txt  chebyshev.rst.txt  index.rst.txt  legendre.rst.txt  modules.rst.txt  trigonometric.rst.txt
hooks/: pre-commit
output/chebyshev/exp0/: config.json
output/chebyshev/exp1/: config.json
output/chebyshev/exp2/: config.json
output/haar/exp0/: config.json
output/haar/exp1/: config.json
output/haar/exp2/: config.json
output/legendre/exp0/: config.json
output/legendre/exp1/: config.json
output/legendre/exp2/: config.json
output/trigonometric/exp0/: config.json
output/trigonometric/exp1/: config.json
output/trigonometric/exp2/: config.json
