[tool.poetry]
name = "Classic aproximations"
version = "1.0.0"
description = ""
authors = ["morfinPL <pl.morfin.pl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
pylint = "^2.13.5"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
pyproject-autoflake = "^1.0.1"

[tool.autoflake]
in-place = true
recursive = true
exclude = ".github,.venv,.vscode,doc,output"
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.autopep8]
max_line_length = 140
exclude = ".github,.venv,.vscode,doc,output"
recursive = true
aggressive = 2
verbose = 0

[tool.isort]
profile = "black"
skip = [".github", ".venv", ".vscode", "doc", "output"]

[tool.pylint.messages_control]
max-line-length = 140
ignore-paths = "^.*/.venv/.*$,^.*/doc/.*$,^.*/.github/.*$,^.*/.vscode/.*$,^.*/hooks/.*$,^.*/output/.*$"
recursive = true
persistent = false
suggestion-mode = true
py-version = "3.9.7"
format = "colorized"
score = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
