[tool.pdm]

[project]
name = "classicApproximations"
version = "1.0.0"
description = ""
authors = [
    {name = "morfinPL", email = "pl.morfin.pl@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "scipy>=1.9.3",
    "matplotlib>=3.7.1",
    "pre-commit>=3.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
dev = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
